Spacing issue in green propulsion

--- a/web/themes/custom/glazed_subtheme/css/style.css
+++ b/web/themes/custom/glazed_subtheme/css/style.css
@@ -1294,10 +1294,26 @@ body.path-search ol li p:last-child {
     height: 100%;
 }
 
+#block-views-block-product-related-block-1-2 {
+    background-color: rgba(206, 205, 201, 0.2);
+}
+
 .view-id-product_related {
     padding-top: 50px;
     padding-top: 40px;
-    background-color: rgba(206, 205, 201, 0.2);
+}
+
+.page-node-type-product#rocket .view-product-related {
+    width: max-content;
+    max-width: initial;
+}
+
+.view-id-product_related .view-content {
+    margin: 0 -4px;
+}
+
+.view-id-product_related .view-content .col-sm-3.views-row {
+    padding: 0 4px;
 }
 
 @media only screen and (max-width: 991px) {
@@ -1323,4 +1339,3 @@ body.path-search ol li p:last-child {
 section#block-views-block-product-related-block-1 {
     padding-bottom: 60px !important;
 }
-
